WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269837
[iOS] Fail camera capture if there is no media environment
https://bugs.webkit.org/show_bug.cgi?id=269837
Summary
[iOS] Fail camera capture if there is no media environment
youenn fablet
Reported
2024-02-21 02:59:16 PST
<
rdar://121770895
>
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-02-21 04:03:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24873
EWS
Comment 2
2024-02-22 03:06:19 PST
Committed
275169@main
(857b349b8403): <
https://commits.webkit.org/275169@main
> Reviewed commits have been landed. Closing PR #24873 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug